--- a/TrashCollection/TrashCollection.csproj
+++ b/TrashCollection/TrashCollection.csproj
@@ -254,6 +254,7 @@
     <Content Include="Views\Customer\EditPickupDates.cshtml" />
     <Content Include="Views\Customer\ViewSpecialPickupDate.cshtml" />
     <Content Include="Views\Employee\EmployeeIndex.cshtml" />
+    <Content Include="Views\Employee\PickUpConfirmation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
